test_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:dataBindingTriggerDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:bundleDebugClassesToRuntimeJar UP-TO-DATE
> Task :app:bundleDebugClassesToCompileJar UP-TO-DATE
> Task :app:preDebugUnitTestBuild UP-TO-DATE
> Task :app:compileDebugUnitTestKotlin NO-SOURCE
> Task :app:javaPreCompileDebugUnitTest UP-TO-DATE

> Task :app:compileDebugUnitTestJavaWithJavac FAILED
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\metadata\MetadataStripperTest.java:103: error: cannot find symbol
        ContentResolver mockResolver = mock(ContentResolver.class);
        ^
  symbol:   class ContentResolver
  location: class MetadataStripperTest
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\metadata\MetadataStripperTest.java:103: error: cannot find symbol
        ContentResolver mockResolver = mock(ContentResolver.class);
                                            ^
  symbol:   class ContentResolver
  location: class MetadataStripperTest
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:36: error: method showCleanComplete in class LocalNotifications cannot be applied to given types;
        LocalNotifications.showCleanComplete(context, 5, 0);
                          ^
  required: Context,int
  found:    Context,int,int
  reason: actual and formal argument lists differ in length
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:39: error: cannot find symbol
        LocalNotifications.cancelConversionProgress(context);
                          ^
  symbol:   method cancelConversionProgress(Context)
  location: class LocalNotifications
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:48: error: method showCleanComplete in class LocalNotifications cannot be applied to given types;
        LocalNotifications.showCleanComplete(context, 5, 0);
                          ^
  required: Context,int
  found:    Context,int,int
  reason: actual and formal argument lists differ in length
5 errors


FAILURE: Build failed with an exception.
[Incubating] Problems report is available at: file:///C:/Users/mattv/AndroidStudioProjects/redact/build/reports/problems/problems-report.html

* What went wrong:
Execution failed for task ':app:compileDebugUnitTestJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:36: error: method showCleanComplete in class LocalNotifications cannot be applied to given types;
          LocalNotifications.showCleanComplete(context, 5, 0);
                            ^
    required: Context,int
    found:    Context,int,int
    reason: actual and formal argument lists differ in length
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:48: error: method showCleanComplete in class LocalNotifications cannot be applied to given types;
          LocalNotifications.showCleanComplete(context, 5, 0);
                            ^
    required: Context,int
    found:    Context,int,int
    reason: actual and formal argument lists differ in length
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\metadata\MetadataStripperTest.java:103: error: cannot find symbol
          ContentResolver mockResolver = mock(ContentResolver.class);
          ^
    symbol:   class ContentResolver
    location: class MetadataStripperTest
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\metadata\MetadataStripperTest.java:103: error: cannot find symbol
          ContentResolver mockResolver = mock(ContentResolver.class);
                                              ^
    symbol:   class ContentResolver
    location: class MetadataStripperTest
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:39: error: cannot find symbol
          LocalNotifications.cancelConversionProgress(context);
                            ^
    symbol:   method cancelConversionProgress(Context)
    location: class LocalNotifications
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.


BUILD FAILED in 1s
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
25 actionable tasks: 1 executed, 24 up-to-date
